fix: always use log
to avoid

    "log" imported and not used

--- a/internal/gen/template/service.go.tmpl
+++ b/internal/gen/template/service.go.tmpl
@@ -22,6 +22,7 @@ func Register{{ $service.Name }}Endpoints(mux *http.ServeMux, svc connect.{{ $se
 	{{- $method := . }}
 	mux.HandleFunc(New{{ $service.Name }}{{ $method.Name }}Handler(path, handler))
 	{{- end }}
+	log.Printf("registered {{ $service.Methods | len }} endpoints of {{ $service.Name }}")
 }
 
 {{- range $service.Methods }}
