Revert "refactor: use loaded value"
This reverts commit de43e51ca068db55a60c4f4d4d2556002a5c7a7f.

--- a/internal/gen/template/service.go.tmpl
+++ b/internal/gen/template/service.go.tmpl
@@ -83,7 +83,7 @@ func New{{ $service.Name }}{{ $method.Name }}Handler(protoPath string, protoHand
 		{{- else }}{{/* if not $field.Optional */}}
 
 		if v, err := To{{ $field.GoType | ToCamel }}({{ $getValue }}); err != nil {
-			log.Printf("failed to convert {{ $field.Name }}=%s: %v", v, err)
+			log.Printf("failed to convert {{ $field.Name }}=%s: %v", {{ $getValue }}, err)
 			http.Error(w, "invalid {{ $field.Name }}", http.StatusBadRequest)
 			return
 		} else {
