feat: relay original context

--- a/internal/gen/template/service.go.tmpl
+++ b/internal/gen/template/service.go.tmpl
@@ -112,7 +112,7 @@ func New{{ $service.Name }}{{ $method.Name }}Handler(protoPath string, protoHand
 		}
 		cr.Header.Set("content-type", "application/json")
 
-		protoHandler.ServeHTTP(w, cr)
+		protoHandler.ServeHTTP(w, cr.WithContext(r.Context()))
 	})
 
 	return "{{ $method.HTTPMethod }} {{ $method.HTTPPath }}", mid(handler)
