--- a/internal/gen/template/service.go.tmpl
+++ b/internal/gen/template/service.go.tmpl
@@ -6,11 +6,14 @@ package {{ .PackageName }}
 import (
 	"bytes"
 	"encoding/json"
+	"io"
 	"log"
 	"net/http"
 
 	connect "{{ .ConnectPackagePath }}"
 	pb "{{ .ProtoPackagePath }}"
+
+	"google.golang.org/protobuf/encoding/protojson"
 )
 
 {{- range .Services }}
@@ -36,11 +39,21 @@ func Register{{ $service.Name }}Endpoints(mux ServeMux, svc connect.{{ $service.
 func New{{ $service.Name }}{{ $method.Name }}Handler(protoPath string, protoHandler http.Handler, mid Middleware) (string, http.Handler) {
 	handler := http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		pbr := pb.{{ $method.Request.Name }}{}
+		defer r.Body.Close()
 
 		{{- if $method.Request.ExpectBody }}
-		dec := json.NewDecoder(r.Body)
-		defer r.Body.Close()
-		if err := dec.Decode(&pbr); err != nil {
+		body, err := io.ReadAll(r.Body)
+		{{- else }}
+		_, err := io.ReadAll(r.Body)
+		{{- end}}
+		if err != nil {
+			log.Printf("failed to read request body: %v", err)
+			http.Error(w, "internal server error", http.StatusInternalServerError)
+			return
+		}
+
+		{{- if $method.Request.ExpectBody }}
+		if err := protojson.Unmarshal(body, &pbr); err != nil {
 			log.Printf("failed to decode request body: %v", err)
 			http.Error(w, "invalid request body", http.StatusBadRequest)
 			return
